--- a/src/components/ClickCounter/index.css
+++ b/src/components/ClickCounter/index.css
@@ -10,7 +10,7 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-
+  height:100vh
   font-family: roboto;
   background-color: f1f5f8;
 }
